--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base 
             max-md:tw-w-full max-md:tw-flex-col max-md:tw-place-content-center">
-                <a href="https://1drv.ms/u/s!AjPEcz74klXhgjIleue9rjFUWwhd?e=PbaWdy" aria-label="signup" class="tw-flex tw-h-[40px] tw-place-items-center tw-gap-2 tw-rounded-full 
+                <a href="apk/erp_iiita.apk" aria-label="signup" class="tw-flex tw-h-[40px] tw-place-items-center tw-gap-2 tw-rounded-full 
               tw-bg-white tw-p-1 tw-pl-4 tw-text-black" download>
                     <span>Download Now</span>
                     <div class="tw-flex tw-h-[30px] tw-w-[30px] tw-place-content-center 
@@ -600,7 +600,7 @@
                 </div>
             </div>
 
-            <a href="https://1drv.ms/u/s!AjPEcz74klXhgjIleue9rjFUWwhd?e=PbaWdy" aria-label="download" class="reveal-up tw-flex tw-h-[40px] tw-place-items-center tw-gap-2 tw-rounded-full
+            <a href="apk/erp_iiita.apk" aria-label="download" class="reveal-up tw-flex tw-h-[40px] tw-place-items-center tw-gap-2 tw-rounded-full
                              tw-bg-black tw-p-1 tw-pl-4 tw-text-white">
                 <span>Download</span>
                 <div class="tw-flex tw-h-[30px] tw-w-[30px] tw-place-content-center tw-place-items-center 
